bug 266309 Windows localized installers don't honor CHARSET/FONTSIZE/FONTNAME for the main dialog r=bsmedberg, sr=dveditz, a=asa